# xdiag

./: CLAUDE.md  CMakeLists.txt
benchmarks/combinatorics/: main.cpp
build-canted/: CMakeCache.txt  Makefile  cmake_install.cmake
cantedAFM/: CMakeLists.txt  HeisenbergSzvar24.outfile.txt  HeisenbergZeemanNsites24.outfile.txt  HeisenbergZeemanSzvar24.outfile.txt  README_plot_heisenberg_spectrum.md  genlatC6.py  main.cpp  plot_heisenberg_spectrum.py
cantedAFM/Latscripts/: README_plot_genlatC6.md  genlat.md  genlat.py  genlatC6.py  honeycomb.24.toml  plot_genlatC6.py  test_plot_genlatC6_smoke.py
cmake/: instantiations.cmake  sources.cmake
tests/: CMakeLists.txt
tests/basis/: test_basis_onthefly.cpp
tests/bits/: test_bitarray.cpp  test_bitops.cpp  test_bitset.cpp  test_bitvector.cpp
tests/combinatorics/: test_bounded_multisets.cpp  test_bounded_partitions.cpp  test_combinations.cpp  test_lin_table.cpp  test_schaefer_table.cpp  test_subsets.cpp
tests/complex/: test_matrix.cpp  test_scalar.cpp  test_vector.cpp
tests/io/: test_file_h5.cpp  test_file_toml.cpp
tests/math/: test_binomial.cpp  test_matrix.cpp  test_scalar.cpp  test_vector.cpp
tests/operators/: test_coeff.cpp  test_monomial.cpp  test_op.cpp  test_opsum.cpp  test_rewrite.cpp
tests/symmetries/: test_permutation.cpp  test_permutation_group.cpp  test_representation.cpp
xdiag/: CMakeLists.txt  armadillo.hpp
xdiag/algebra/: apply.cpp  apply.hpp  isapprox.hpp
xdiag/algorithms/: norm_estimate.cpp  norm_estimate.hpp  sparse_diag.cpp  sparse_diag.hpp
xdiag/basis/: apply.cpp  apply.hpp  basis.hpp  (+5 more)
(+294 files in other folders)
